# YaRpc

./: .gitignore  CMakeLists.txt  Note.md  README.md
benchmark/plain_pb_benchmark/: CMakeLists.txt  pb_client.cpp  pb_server.cpp
example/async_rpc_echo/: CMakeLists.txt  async_client.cpp  async_server.cpp
example/blocking_rpc_echo/: CMakeLists.txt  blocking_client.cpp  blocking_server.cpp  echo.proto
src/: channel.cpp  channel.hpp  client.cpp  client.hpp  controller.cpp  controller.hpp  internal_rpc_protocol.cpp  internal_rpc_protocol.hpp  io_service_pool.cpp  io_service_pool.hpp  message_op.hpp  meta.proto  noncopyable.hpp  port.hpp  protocol_template.hpp  server.cpp  server.hpp
test/asio_echo_server_test/: CMakeLists.txt  client.cc  echo_server.cc
test/asio_timer_test/: CMakeLists.txt  asio_timer_test.cc  asio_timer_test.cpp
test/blocking_tcp_echo_test/: CMakeLists.txt  blocking_client.cpp  blocking_server.cpp
test/echo_test/: CMakeLists.txt  echo_client.cpp  echo_server.cpp
test/pb_rpc_test/: CMakeLists.txt  pb_client.cpp  pb_server.cpp
test/shared_ptr_test/: CMakeLists.txt  shared_ptr_test.cpp
test/streambuf_test/: CMakeLists.txt  streambuf_test.cpp
test/string_test/: CMakeLists.txt  string_test.cpp
test/thread_safe_test/: CMakeLists.txt  thread_safe_test.cpp
test/utils/: CMakeLists.txt  test.cpp
test/utils_test/: utils_test.cpp
